--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,10 +1,5 @@
 @charset "UTF-8";
-/*!
-=========================================================
-* GAMIUM Dashboard Pro - v1.0.0
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-*/
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -65,7 +60,7 @@
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 255, 255, 255;
   --bs-body-bg-rgb: 0, 0, 0;
-  --bs-font-sans-serif: "Raleway";
+  --bs-font-sans-serif: "Roboto";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(
