--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,84 +1,84 @@
 @charset "UTF-8";
 
 :root {
-  --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
-  --bs-purple: #471e96;
-  --bs-pink: #d63384;
-  --bs-red: #b24061;
-  --bs-orange: #fd7e14;
-  --bs-yellow: #ffc107;
-  --bs-green: #40b574;
-  --bs-teal: #20c997;
-  --bs-cyan: #8836f2;
-  --bs-white: #fff;
-  --bs-gray: #6c757d;
-  --bs-black: #000;
-  --bs-gray-dark: #242326;
-  --bs-gray-100: #f8f9fa;
-  --bs-gray-200: #e9ecef;
-  --bs-gray-300: #dee2e6;
-  --bs-gray-400: #ced4da;
-  --bs-gray-500: #adb5bd;
-  --bs-gray-600: #6c757d;
-  --bs-gray-700: #495057;
-  --bs-gray-800: #242326;
-  --bs-gray-900: #1f1c27;
-  --bs-white-5: #ffffff0d;
-  --bs-white-10: #ffffff1a;
-  --bs-white-20: #ffffff33;
-  --bs-white-30: #ffffff4d;
-  --bs-white-40: #ffffff66;
-  --bs-white-50: #ffffff80;
-  --bs-white-60: #ffffff99;
-  --bs-white-70: #ffffff99;
-  --bs-white-80: #ffffffb3;
-  --bs-white-90: #ffffffe6;
-  --bs-white-100: #ffffff;
-  --bs-primary: #8b1dff;
-  --bs-primary-hover: #8a1dffcc;
-  --bs-primary-disabled: #8a1dff4d;
-  --bs-secondary: #281639;
-  --bs-secondary-hover: #28163999;
-  --bs-success: #44ff84;
-  --bs-info: #8836f2;
-  --bs-warning: #ac6700;
-  --bs-danger: #ef3f3f;
-  --bs-light: #f8f9fa;
-  --bs-dark: #161516;
-  --bs-dark-secondary: #1f1f22;
-  --bs-dark-secondary-hover: #1f1f22cc;
-  --bs-primary-rgb: 71, 30, 150;
-  --bs-secondary-rgb: 255, 255, 255;
-  --bs-success-rgb: 64, 181, 116;
-  --bs-info-rgb: 136, 54, 242;
-  --bs-warning-rgb: 255, 193, 7;
-  --bs-danger-rgb: 178, 64, 97;
-  --bs-light-rgb: 248, 249, 250;
-  --bs-dark-rgb: 31, 28, 39;
-  --bs-white-rgb: 255, 255, 255;
-  --bs-black-rgb: 0, 0, 0;
-  --bs-body-color-rgb: 255, 255, 255;
-  --bs-body-bg-rgb: 0, 0, 0;
-  --bs-font-sans-serif: "Roboto";
-  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
-  --bs-gradient: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0.15),
-    rgba(255, 255, 255, 0)
-  );
-  --bs-body-font-family: var(--bs-font-sans-serif);
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
-  --bs-body-line-height: 1.5;
-  --bs-body-color: #fff;
-  --bs-body-bg: #000;
-  --bs-radius-medium: 6px;
-  --bs-radius-large: 20px;
-  --bs-font-extra-small: 8pt;
-  --bs-font-small: 10pt;
-  --bs-font-medium: 12pt;
-  --bs-font-large: 14pt;
-  --bs-font-extra-large: 16pt;
+	--bs-blue: #0d6efd;
+	--bs-indigo: #6610f2;
+	--bs-purple: #471e96;
+	--bs-pink: #d63384;
+	--bs-red: #b24061;
+	--bs-orange: #fd7e14;
+	--bs-yellow: #ffc107;
+	--bs-green: #40b574;
+	--bs-teal: #20c997;
+	--bs-cyan: #8836f2;
+	--bs-white: #fff;
+	--bs-gray: #6c757d;
+	--bs-black: #000;
+	--bs-gray-dark: #242326;
+	--bs-gray-100: #f8f9fa;
+	--bs-gray-200: #e9ecef;
+	--bs-gray-300: #dee2e6;
+	--bs-gray-400: #ced4da;
+	--bs-gray-500: #adb5bd;
+	--bs-gray-600: #6c757d;
+	--bs-gray-700: #495057;
+	--bs-gray-800: #242326;
+	--bs-gray-900: #1f1c27;
+	--bs-white-5: #ffffff0d;
+	--bs-white-10: #ffffff1a;
+	--bs-white-20: #ffffff33;
+	--bs-white-30: #ffffff4d;
+	--bs-white-40: #ffffff66;
+	--bs-white-50: #ffffff80;
+	--bs-white-60: #ffffff99;
+	--bs-white-70: #ffffff99;
+	--bs-white-80: #ffffffb3;
+	--bs-white-90: #ffffffe6;
+	--bs-white-100: #ffffff;
+	--bs-primary: #8b1dff;
+	--bs-primary-hover: #8a1dffcc;
+	--bs-primary-disabled: #8a1dff4d;
+	--bs-secondary: #281639;
+	--bs-secondary-hover: #28163999;
+	--bs-success: #44ff84;
+	--bs-info: #8836f2;
+	--bs-warning: #ac6700;
+	--bs-danger: #ef3f3f;
+	--bs-light: #f8f9fa;
+	--bs-dark: #161516;
+	--bs-dark-secondary: #1f1f22;
+	--bs-dark-secondary-hover: #1f1f22cc;
+	--bs-primary-rgb: 71, 30, 150;
+	--bs-secondary-rgb: 255, 255, 255;
+	--bs-success-rgb: 64, 181, 116;
+	--bs-info-rgb: 136, 54, 242;
+	--bs-warning-rgb: 255, 193, 7;
+	--bs-danger-rgb: 178, 64, 97;
+	--bs-light-rgb: 248, 249, 250;
+	--bs-dark-rgb: 31, 28, 39;
+	--bs-white-rgb: 255, 255, 255;
+	--bs-black-rgb: 0, 0, 0;
+	--bs-body-color-rgb: 255, 255, 255;
+	--bs-body-bg-rgb: 0, 0, 0;
+	--bs-font-sans-serif: 'Roboto';
+	--bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+		'Liberation Mono', 'Courier New', monospace;
+	--bs-gradient: linear-gradient(
+		180deg,
+		rgba(255, 255, 255, 0.15),
+		rgba(255, 255, 255, 0)
+	);
+	--bs-body-font-family: var(--bs-font-sans-serif);
+	--bs-body-font-size: 1rem;
+	--bs-body-font-weight: 400;
+	--bs-body-line-height: 1.5;
+	--bs-body-color: #fff;
+	--bs-body-bg: #000;
+	--bs-radius-medium: 6px;
+	--bs-radius-large: 20px;
+	--bs-font-extra-small: 8pt;
+	--bs-font-small: 10pt;
+	--bs-font-medium: 12pt;
+	--bs-font-large: 14pt;
+	--bs-font-extra-large: 16pt;
 }
