--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,9 +1,9 @@
-@import "/src/styles/mixins.scss";
+@import '/src/styles/mixins.scss';
 
 .About {
-  width: 800px;
-  background-color: red;
-  height: 800px;
-  margin: 100px auto;
-  padding: 50px;
+	width: 800px;
+	background-color: red;
+	height: 800px;
+	margin: 100px auto;
+	padding: 50px;
 }
