--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,6 +12,7 @@
 		display: flex;
 		border-bottom: 0px;
 		justify-content: space-between;
+		font-weight: bold;
 
 		&.Empty {
 			justify-content: flex-end;
@@ -29,8 +30,8 @@
 		}
 
 		.CloseIcon {
-			width: 20px;
-			height: 20px;
+			width: 25px;
+			height: 25px;
 		}
 
 		svg {
