--- a/src/pages/Admin/Users/Users.module.scss
+++ b/src/pages/Admin/Users/Users.module.scss
@@ -1,6 +1,21 @@
 @import '/src/styles/mixins.scss';
 
 .Users {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap: 15px;
+
+	.NewUserButton {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 100%;
+		width: 50px;
+		height: 50px;
+	}
+
 	.Actions {
 		display: flex;
 		gap: 15px;
