--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -23,6 +23,10 @@
 		}
 	}
 
+	.Offcanvas {
+		width: 200px !important;
+	}
+
 	.Logo {
 		width: 50px;
 		height: 50px;
@@ -32,10 +36,22 @@
 		width: 25px;
 		height: 25px;
 	}
+}
 
-	.LoginWrapper {
+[class~='offcanvas-start'] {
+	width: 300px !important;
+
+	[class~='offcanvas-title'] {
 		display: flex;
 		align-items: center;
+	}
+
+	.LoginWrapper {
 		gap: 10px;
+	}
+
+	.LogoMobile {
+		width: 50px;
+		height: 50px;
 	}
 }
