--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,9 +1,10 @@
 @import '/src/styles/mixins.scss';
 
 .Home {
-	width: 800px;
 	background-color: aqua;
-	height: 800px;
-	margin: 100px auto;
-	padding: 50px;
+	padding: 20px;
+	overflow: hidden;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
