--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -2,8 +2,8 @@
 
 .Loader {
 	margin: auto;
-	border: 2px dotted var(--bs-primary);
-	border-top: 2px solid var(--bs-primary);
+	border: 2px dotted var(--bs-white);
+	border-top: 2px solid var(--bs-white);
 	border-radius: 50%;
 	-webkit-animation: spin 2s linear infinite;
 	animation: spin 2s linear infinite;
