--- a/src/pages/Images/Images.module.scss
+++ b/src/pages/Images/Images.module.scss
@@ -13,12 +13,20 @@
 	align-items: center;
 	gap: 25px;
 
-	.Image {
+	.ImagesWrapper {
 		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
+		flex-direction: column;
+		justify-content: center;
 		align-items: center;
-		margin-bottom: 20px;
-		max-width: 90vw;
+		gap: 25px;
+
+		.Image {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			margin-bottom: 20px;
+			max-width: 90vw;
+		}
 	}
 }
