--- a/src/components/FileUpload/FileUpload.module.scss
+++ b/src/components/FileUpload/FileUpload.module.scss
@@ -5,6 +5,10 @@
 	justify-content: center !important;
 	align-items: center !important;
 	border-radius: 100% !important;
-	width: 50px !important;
-	height: 50px !important;
+	width: 35px !important;
+	height: 35px !important;
+
+	.Loader {
+		font-size: 2px;
+	}
 }
