--- a/src/forms/LoginForm/LoginForm.module.scss
+++ b/src/forms/LoginForm/LoginForm.module.scss
@@ -9,4 +9,14 @@
 	border: 1px solid gray;
 	padding: 20px;
 	border-radius: var(--bs-radius-medium);
+
+	.Wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		.Loader {
+			margin: 20px;
+		}
+	}
 }
