--- a/src/pages/admin/NewFlat/NewFlat.module.scss
+++ b/src/pages/admin/NewFlat/NewFlat.module.scss
@@ -1,7 +1,7 @@
 @import '/src/styles/mixins.scss';
 
 .NewFlat {
-	padding: 50px 20px 20px 20px;
+	padding: 50px 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
