language font size

--- a/src/components/LanguageSelector/LanguageSelector.module.scss
+++ b/src/components/LanguageSelector/LanguageSelector.module.scss
@@ -32,7 +32,7 @@
 			color: var(--bs-dark-secondary);
 			text-align: center;
 			text-transform: capitalize;
-			font-size: var(--bs-font-small);
+			font-size: var(--bs-font-large);
 		}
 	}
 
