--- a/src/components/files/FileSorteableList/FileSorteableList.module.scss
+++ b/src/components/files/FileSorteableList/FileSorteableList.module.scss
@@ -14,6 +14,7 @@
 	}
 
 	.FileList {
+		border: 0px;
 		width: 100%;
 
 		.NewProductPhotosInfoWrapper {
@@ -22,7 +23,8 @@
 			justify-content: space-between;
 			align-items: center;
 			gap: 15px;
-			font-size: 8pt;
+			font-size: var(--bs-font-small);
+			border: 0px;
 
 			.NewProductArrows {
 				cursor: pointer;
@@ -40,4 +42,10 @@
 			height: 20px;
 		}
 	}
+}
+
+.Border {
+	border: 1px solid var(--bs-gray-400);
+	border-radius: var(--bs-radius-medium);
+	padding: 10px;
 }
