--- a/src/app/App/App.module.scss
+++ b/src/app/App/App.module.scss
@@ -1,2 +1,14 @@
 .App {
 }
+
+body {
+	overflow-y: scroll;
+	scrollbar-width: none; /* Para Firefox */
+	-ms-overflow-style: none; /* Para IE 10+ */
+}
+
+/* Para Chrome y Safari */
+body::-webkit-scrollbar {
+	width: 0;
+	height: 0;
+}
