--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,7 @@
 @import '/src/styles/mixins.scss';
 
 .Home {
-	padding: 50px;
+	padding: 50px 0px;
 	overflow: hidden;
 	white-space: nowrap;
 	overflow: hidden;
