--- a/src/components/maps/EventsMapPage/EventsMapPage.module.scss
+++ b/src/components/maps/EventsMapPage/EventsMapPage.module.scss
@@ -2,4 +2,31 @@
 
 .EventsMapPage {
 	height: calc(100vh - 200px);
+
+	.MarkerInfo {
+		position: absolute;
+		opacity: 0;
+		top: 50%;
+		right: 0;
+		width: 300px;
+		height: 400px;
+		transform: translate(0, -50%);
+		background-color: white;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		gap: 20px;
+		transition: opacity 0.5s;
+		pointer-events: none;
+		border-top-left-radius: 4px;
+		border-bottom-left-radius: 4px;
+		border: 1px solid green;
+	}
+
+	.Open {
+		opacity: 1;
+		transition: opacity 0.5s;
+		pointer-events: initial;
+	}
 }
