put houses , retrive houses

--- a/src/components/inputs/InputTextarea/InputTextarea.module.scss
+++ b/src/components/inputs/InputTextarea/InputTextarea.module.scss
@@ -1,6 +1,10 @@
 @import '/src/styles/mixins.scss';
 
 .InputTextarea {
+	textArea {
+		margin-bottom: 10px;
+	}
+
 	.TextArea {
 		min-height: 100px;
 	}
