--- a/src/forms/SearchAddressForm/SearchAddressForm.module.scss
+++ b/src/forms/SearchAddressForm/SearchAddressForm.module.scss
@@ -9,51 +9,17 @@
 	border-radius: 8px;
 	margin-bottom: 20px;
 
-	.ChecksWrapper {
-		display: flex !important;
-		justify-content: flex-start !important;
-		align-items: center !important;
-		gap: 10px !important;
-		flex-wrap: wrap !important;
-
-		.Switch {
-			display: flex !important;
-			justify-content: flex-start !important;
-			align-items: center !important;
-			gap: 25px !important;
-
-			input {
-				width: 50px !important;
-			}
-
-			label {
-				white-space: nowrap;
-				font-size: var(--bs-font-large);
-				font-weight: 700;
-			}
-		}
-
-		.Check {
-			display: flex !important;
-			justify-content: flex-start !important;
-			align-items: center !important;
-			gap: 25px !important;
-
-			input {
-				border: 1px solid var(--bs-gray-400) !important;
-				width: 20px !important;
-				height: 20px !important;
-			}
-
-			label {
-				white-space: nowrap !important;
-				font-size: var(--bs-font-large) !important;
-				font-weight: 500 !important;
-			}
-		}
+	label {
+		margin-left: 10px;
+		white-space: nowrap;
 	}
 
-	input {
+	[id='-google-places-suggestions-container'] {
+		background-color: white;
+		cursor: pointer;
+	}
+
+	[id='react-google-places-autocomplete-input'] {
 		width: 100% !important;
 		border-radius: var(--bs-radius-medium);
 		border: 1px solid var(--bs-gray-400);
@@ -68,11 +34,6 @@
 		&:focus-visible {
 			outline: #b3a1c1;
 		}
-	}
-
-	[id='-google-places-suggestions-container'] {
-		background-color: white;
-		cursor: pointer;
 	}
 
 	[id^='-google-places-autocomplete-suggestion']:hover {
@@ -97,9 +58,5 @@
 		align-items: center;
 		gap: 50px;
 		margin-bottom: 30px;
-	}
-
-	.Margins {
-		margin-bottom: 10px;
 	}
 }
