--- a/src/components/files/VideoUpload/VideoUpload.module.scss
+++ b/src/components/files/VideoUpload/VideoUpload.module.scss
@@ -1,19 +1,20 @@
 @import '/src/styles/mixins.scss';
 
-.FileSorteableList {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+.VideoUpload {
 	margin-bottom: 10px;
 
-	.Input {
-		&:disabled {
-			background-color: transparent !important;
-		}
-	}
+	.Button {
+		display: flex !important;
+		justify-content: center !important;
+		align-items: center !important;
+		border-radius: 100% !important;
+		background: var(--bs-primary) !important;
+		width: 35px !important;
+		height: 35px !important;
 
-	.FileInput {
+		.Loader {
+			font-size: 2px;
+		}
 	}
 
 	.FileList {
@@ -41,6 +42,11 @@
 		.NewProductDeleteItem {
 			margin-left: 10px;
 			cursor: pointer;
+			width: 20px;
+			height: 20px;
+		}
+
+		.FileDelete {
 			width: 20px;
 			height: 20px;
 		}
