--- a/src/components/files/VideoUpload/VideoUpload.module.scss
+++ b/src/components/files/VideoUpload/VideoUpload.module.scss
@@ -21,7 +21,7 @@
 		border: 0px;
 		width: 100%;
 
-		.NewProductPhotosInfoWrapper {
+		.FileWrapper {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
@@ -30,16 +30,16 @@
 			font-size: var(--bs-font-small);
 			border: 0px;
 
-			.NewProductArrows {
+			.New {
 				cursor: pointer;
 			}
 
-			.EditProductArrows {
+			.Edit {
 				cursor: pointer;
 			}
 		}
 
-		.NewProductDeleteItem {
+		.Delete {
 			margin-left: 10px;
 			cursor: pointer;
 			width: 20px;
