--- a/src/forms/modals/NewHouseModal/NewHouseModal.module.scss
+++ b/src/forms/modals/NewHouseModal/NewHouseModal.module.scss
@@ -1,6 +1,6 @@
 @import '/src/styles/mixins.scss';
 
-.NewHouse {
+.NewHouseModal {
 	padding: 50px 20px;
 	display: flex;
 	flex-direction: column;
