--- a/src/pages/admin/Properties/Properties.module.scss
+++ b/src/pages/admin/Properties/Properties.module.scss
@@ -1,6 +1,7 @@
 @import '/src/styles/mixins.scss';
 
 .Properties {
+	padding: 30px;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -9,9 +10,18 @@
 	.HeaderWrapper {
 		display: flex;
 		flex-direction: column;
-		justify-content: space-between;
+		justify-content: center;
 		align-items: center;
 		gap: 20px;
+
+		.ButtonNewHouse {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			border-radius: 100%;
+			width: 50px;
+			height: 50px;
+		}
 	}
 	.Actions {
 		display: flex;
