--- a/src/components/utils/ErrorFallback/ErrorFallback.module.scss
+++ b/src/components/utils/ErrorFallback/ErrorFallback.module.scss
@@ -1,20 +1,20 @@
-@import "src/styles/mixins";
+@import 'src/styles/mixins';
 
 .ErrorFallback {
-  position: relative;
+	position: relative;
 
-  .ErrorWrapper {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+	.ErrorWrapper {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		gap: 10px;
 
-    .Error {
-    }
-  }
+		.Error {
+		}
+	}
 }
