--- a/src/components/utils/Skeleton/Skeleton.module.scss
+++ b/src/components/utils/Skeleton/Skeleton.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/mixins";
+@import 'src/styles/mixins';
 
 .Skeleton {
-  background-color: var(--bs-gray-500);
+	background-color: var(--bs-gray-500);
 }
