--- a/src/components/maps/EventsMapPage/EventsMapPage.module.scss
+++ b/src/components/maps/EventsMapPage/EventsMapPage.module.scss
@@ -9,7 +9,7 @@
 		top: 50%;
 		right: 0;
 		width: 300px;
-		height: 400px;
+		height: 80vh;
 		transform: translate(0, -50%);
 		background-color: white;
 		display: flex;
