--- a/src/components/maps/EventsMapMarker/EventsMapMarker.module.scss
+++ b/src/components/maps/EventsMapMarker/EventsMapMarker.module.scss
@@ -3,19 +3,47 @@ $K_SIZE: 40px;
 
 .EventsMapMarker {
 	position: relative;
-	width: $K_SIZE;
-	height: $K_SIZE;
-	left: -$K_SIZE / 2;
-	top: -$K_SIZE / 2;
-	border: 5px solid green;
-	border-radius: $K_SIZE;
+	width: fit-content;
+	height: fit-content;
+	border: 2px solid #3f51b5;
 	background-color: white;
 	text-align: center;
 	color: #3f51b5;
 	font-size: 16px;
 	font-weight: bold;
-	padding: 4px;
+	padding: 5px;
 	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	border-top-left-radius: 0px;
+
+	&::before {
+		content: '';
+		position: absolute;
+		top: -5px;
+		left: -5px;
+		border-right: 5px solid transparent;
+		border-top: 5px solid #3f51b5;
+		border-left: 5px solid #3f51b5;
+		border-bottom: 5px solid #3f51b5;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
+		rotate: 45deg;
+	}
+
+	&:hover {
+		background-color: #3f51b5;
+		color: var(--bs-white);
+
+		.Overlay {
+			opacity: 1;
+			pointer-events: initial;
+		}
+	}
 
 	.Overlay {
 		opacity: 0;
@@ -33,7 +61,7 @@ $K_SIZE: 40px;
 		background-color: white;
 		color: black;
 		border-radius: 8px;
-		border: 1px solid black;
+		border: 1px solid #3f51b5;
 		z-index: 2;
 		pointer-events: none;
 
@@ -42,6 +70,7 @@ $K_SIZE: 40px;
 		}
 
 		.Triangle {
+			background-color: #3f51b5;
 			position: absolute;
 			left: -15px;
 			top: 10px;
@@ -49,16 +78,6 @@ $K_SIZE: 40px;
 			border-left: 10px solid transparent;
 			border-right: 10px solid transparent;
 			border-bottom: 10px solid;
-		}
-	}
-
-	&.Hovered {
-		border: 5px solid #3f51b5;
-		color: #f44336;
-
-		.Overlay {
-			opacity: 1;
-			pointer-events: initial;
 		}
 	}
 }
