--- a/src/components/maps/EventsMapPage/EventsMapPage.module.scss
+++ b/src/components/maps/EventsMapPage/EventsMapPage.module.scss
@@ -1,16 +1,15 @@
 @import '/src/styles/mixins.scss';
 
 .EventsMapPage {
-	height: calc(100vh - 200px);
+	height: 100%;
 
 	.MarkerInfo {
 		position: absolute;
 		opacity: 0;
-		top: 50%;
+		bottom: 0;
 		right: 0;
 		width: 300px;
-		height: 80vh;
-		transform: translate(0, -50%);
+		height: calc(100vh - 50px);
 		background-color: white;
 		display: flex;
 		justify-content: center;
@@ -19,9 +18,7 @@
 		gap: 20px;
 		transition: opacity 0.5s;
 		pointer-events: none;
-		border-top-left-radius: 4px;
-		border-bottom-left-radius: 4px;
-		border: 1px solid green;
+		border-left: 2px solid #3f51b5;
 	}
 
 	.Open {
