--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,10 +1,10 @@
 @import '/src/styles/mixins.scss';
 
 .Home {
-	padding: 50px 0px;
 	overflow: hidden;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	user-select: none;
+	height: calc(100vh - 50px);
 }
