--- a/src/components/maps/EventsMap/EventsMap.module.scss
+++ b/src/components/maps/EventsMap/EventsMap.module.scss
@@ -6,19 +6,48 @@
 	.MarkerInfo {
 		position: absolute;
 		opacity: 0;
-		bottom: 0;
+		top: 50px;
 		right: 0;
 		width: 300px;
-		height: calc(100vh - 50px);
 		background-color: white;
 		display: flex;
-		justify-content: center;
+		justify-content: flex-start;
 		align-items: center;
 		flex-direction: column;
-		gap: 20px;
+		gap: 10px;
 		transition: opacity 0.5s;
 		pointer-events: none;
 		border-left: 2px solid #3f51b5;
+		border-bottom: 2px solid #3f51b5;
+
+		.CloseButton {
+			align-self: flex-end;
+			margin-right: 10px;
+			margin-top: 10px;
+		}
+
+		.Slider {
+			min-height: 230px;
+
+			.Image {
+				border-radius: unset !important;
+			}
+		}
+
+		.Wrapper {
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			gap: 15px;
+			width: 100%;
+			margin-left: 15px;
+
+			.City {
+			}
+
+			.Neighborhood {
+			}
+		}
 	}
 
 	.Open {
