fonts and other

--- a/src/app/AppLayout/AppLayout.module.scss
+++ b/src/app/AppLayout/AppLayout.module.scss
@@ -1,6 +1,14 @@
 @import '/src/styles/mixins.scss';
 
 .AppLayout {
+	overflow: hidden !important;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+
 	.Container {
+		overflow: hidden !important;
 	}
 }
