--- a/src/components/maps/EventsMap/EventsMap.module.scss
+++ b/src/components/maps/EventsMap/EventsMap.module.scss
@@ -4,12 +4,12 @@
 	height: 100%;
 
 	.MarkerInfo {
-		position: absolute;
+		position: fixed;
 		opacity: 0;
-		top: 50px;
-		right: 0;
+		top: 150px;
+		right: 10px;
 		width: 300px;
-		background-color: white;
+		background-color: var(--bs-white);
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
@@ -17,35 +17,166 @@
 		gap: 10px;
 		transition: opacity 0.5s;
 		pointer-events: none;
-		border-left: 2px solid #3f51b5;
-		border-bottom: 2px solid #3f51b5;
+		border: 2px solid #00000099;
+		border-radius: 5px;
+		box-shadow: 10px 10px 25px 20px rgba(0, 0, 0, 0.3);
+
+		@include mobile {
+			width: unset;
+			flex: 1;
+			flex-direction: row;
+			align-items: flex-start;
+			justify-content: flex-start;
+			top: unset;
+			bottom: 1px;
+			left: 1px;
+			right: 1px;
+			height: 125px;
+			gap: 0px;
+			box-shadow: 0px -20px 25px 20px rgba(0, 0, 0, 0.3);
+		}
 
 		.CloseButton {
 			align-self: flex-end;
 			margin-right: 10px;
 			margin-top: 10px;
+			width: 30px;
+			height: 30px;
+			fill: #00000099 !important;
+			cursor: pointer;
+
+			&:hover {
+				fill: #000000 !important;
+			}
+
+			@include mobile {
+				margin: 0px !important;
+				position: absolute;
+				top: -40px;
+				right: 10px;
+			}
 		}
 
 		.Slider {
 			min-height: 230px;
+			padding: 5px;
+
+			@include mobile {
+				width: 160px;
+				min-height: unset;
+				height: 100%;
+			}
 
 			.Image {
 				border-radius: unset !important;
 			}
 		}
 
-		.Wrapper {
+		.Container {
+			height: 180px;
 			display: flex;
+			flex-direction: column;
 			justify-content: flex-start;
-			align-items: center;
-			gap: 15px;
+			align-items: flex-start;
 			width: 100%;
-			margin-left: 15px;
+			gap: 5px;
+			overflow-y: scroll;
+			overflow-x: hidden;
+			scrollbar-width: none;
 
-			.City {
+			&::-webkit-scrollbar {
+				display: none;
 			}
 
-			.Neighborhood {
+			@include mobile {
+				gap: 0px;
+				height: 115px;
+			}
+
+			.Wrapper {
+				display: flex;
+				justify-content: flex-start;
+				align-items: center;
+				gap: 5px;
+				width: 100%;
+				margin-left: 15px;
+
+				@include mobile {
+					margin-left: 0;
+				}
+
+				.Address {
+					font-size: var(--bs-font-extra-large);
+					font-weight: 700;
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
+
+				.City {
+					font-size: var(--bs-font-medium);
+					font-weight: 600;
+				}
+
+				.Neighborhood {
+					font-size: var(--bs-font-medium);
+					font-weight: 600;
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
+
+				.Rooms,
+				.Size {
+					font-size: var(--bs-font-medium);
+					font-weight: 600;
+				}
+
+				.Floor {
+					font-size: var(--bs-font-medium);
+					font-weight: 600;
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
+
+				.Price {
+					text-overflow: ellipsis;
+					overflow: hidden;
+				}
+			}
+
+			.Footer {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				width: 100%;
+				height: 100%;
+
+				@include mobile {
+					justify-content: flex-start;
+					align-items: flex-end;
+				}
+
+				.Button {
+					display: flex;
+					padding: 5px 10px;
+
+					.Text {
+						margin-right: 5px;
+						font-size: var(--bs-font-small);
+						cursor: pointer;
+					}
+
+					.Icon {
+						width: 10px;
+						height: 10px;
+						fill: var(--bs-white);
+						cursor: pointer;
+					}
+
+					&:focus {
+						outline: none;
+						box-shadow: none;
+					}
+				}
 			}
 		}
 	}
