images list cards

--- a/src/modules/common/components/Image/Image.module.scss
+++ b/src/modules/common/components/Image/Image.module.scss
@@ -17,6 +17,7 @@
 		background-color: transparent;
 		border-radius: inherit;
 		margin: 0px;
+		object-fit: cover;
 	}
 
 	.Invalid {
@@ -26,6 +27,5 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		background: linear-gradient(180deg, rgba(48, 48, 57, 0.63) 12.94%, #161618 81.02%);
 	}
 }
