--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -76,6 +76,8 @@
 	--bs-font-medium: 12px;
 	--bs-font-large: 14px;
 	--bs-font-extra-large: 16px;
+	--bs-font-extra-extra-medium: 18px;
+	--bs-font-extra-extra-large: 20px;
 	--bs-offcanvas-width: 300px;
 	--bs-transition: 0.25s ease-in-out;
 	--bs-navbar-height: 50px;
