--- a/src/app/App/App.module.scss
+++ b/src/app/App/App.module.scss
@@ -4,11 +4,10 @@
 
 body {
 	overflow-y: scroll;
-	scrollbar-width: none; /* Para Firefox */
-	-ms-overflow-style: none; /* Para IE 10+ */
+	scrollbar-width: none;
+	-ms-overflow-style: none;
 }
 
-/* Para Chrome y Safari */
 body::-webkit-scrollbar {
 	width: 0;
 	height: 0;
