--- a/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
+++ b/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
@@ -6,13 +6,14 @@
 	align-items: center;
 	height: 300px !important;
 	max-height: 300px;
-	margin-bottom: 25px;
 	border-radius: var(--bs-radius-medium);
 	border: 2px solid #d4deee;
+	width: 900px;
 
 	@include mobile {
-		height: 200px;
-		max-height: 200px;
+		height: 140px;
+		max-height: 140px;
+		width: 100%;
 	}
 
 	.Slider {
@@ -23,8 +24,8 @@
 		padding: 5px;
 
 		@include mobile {
-			max-width: 200px;
-			width: 200px;
+			max-width: 140px;
+			width: 140px;
 			min-height: unset;
 			height: 100%;
 			padding: 0px;
@@ -45,5 +46,104 @@
 		height: 100%;
 		padding: 10px;
 		gap: 5px;
+
+		@include mobile {
+			overflow: hidden;
+		}
+
+		.Wrapper {
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			gap: 5px;
+			margin-left: 15px;
+			margin-right: 15px;
+
+			@include mobile {
+				margin-left: 0;
+				width: 100%;
+			}
+
+			.Address {
+				font-size: var(--bs-font-extra-extra-large);
+				font-weight: 700;
+				white-space: initial;
+
+				@include mobile {
+					text-overflow: ellipsis;
+					overflow: hidden;
+					font-size: var(--bs-font-medium);
+				}
+			}
+
+			.City {
+				font-size: var(--bs-font-medium);
+				font-weight: 600;
+			}
+
+			.Neighborhood {
+				font-size: var(--bs-font-medium);
+				font-weight: 600;
+				text-overflow: ellipsis;
+				overflow: hidden;
+			}
+
+			.Rooms,
+			.Size {
+				font-size: var(--bs-font-medium);
+				font-weight: 600;
+			}
+
+			.Floor {
+				font-size: var(--bs-font-medium);
+				font-weight: 600;
+				text-overflow: ellipsis;
+				overflow: hidden;
+			}
+
+			.Operation,
+			.Price {
+				font-size: var(--bs-font-extra-large);
+				font-weight: 700;
+				text-overflow: ellipsis;
+				overflow: hidden;
+			}
+		}
+
+		.Footer {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 100%;
+			height: 100%;
+
+			@include mobile {
+				justify-content: flex-start;
+				align-items: flex-end;
+			}
+
+			.Button {
+				display: flex;
+				padding: 5px 10px;
+
+				.Text {
+					margin-right: 5px;
+					font-size: var(--bs-font-small);
+					cursor: pointer;
+				}
+
+				.Icon {
+					width: 10px;
+					height: 10px;
+					fill: var(--bs-white);
+					cursor: pointer;
+				}
+
+				&:focus {
+					outline: none;
+					box-shadow: none;
+				}
+			}
+		}
 	}
 }
