--- a/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
+++ b/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
@@ -4,36 +4,43 @@
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	height: 300px !important;
-	max-height: 300px;
+	height: 200px !important;
+	max-height: 200px;
 	border-radius: var(--bs-radius-medium);
 	border: 2px solid #d4deee;
-	width: 900px;
+	width: 100%;
+	max-width: 900px;
 
 	@include mobile {
 		height: 140px;
 		max-height: 140px;
 		width: 100%;
+		border-radius: 0px;
 	}
 
 	.Slider {
 		width: 100%;
 		height: 100%;
-		max-width: 290px;
-		min-height: 290px;
+		max-width: 190px;
+		min-height: 190px;
 		padding: 5px;
 
 		@include mobile {
 			max-width: 140px;
 			width: 140px;
 			min-height: unset;
-			height: 100%;
+			height: 140px;
+			max-height: 140px;
 			padding: 0px;
 		}
 
 		.Image {
 			border-radius: unset !important;
 			height: 100%;
+
+			&.NoAvailable {
+				opacity: 0.5;
+			}
 		}
 	}
 
