--- a/src/modules/home/components/RealEstateList/RealEstateList.module.scss
+++ b/src/modules/home/components/RealEstateList/RealEstateList.module.scss
@@ -1,18 +1,8 @@
 @import '/src/styles/mixins.scss';
 
 .RealEstateList {
-	gap: 20px;
-	padding: 25px;
 	overflow: scroll;
-	display: flex;
-	flex-direction: column;
-	align-items: flex-end;
-
-	@include mobile {
-		padding: 0px;
-		padding-top: 25px !important  ;
-		padding-bottom: 150px !important;
-	}
+	scrollbar-width: none;
 
 	&::-webkit-scrollbar {
 		display: none;
