--- a/src/modules/home/components/RealEstateMap/RealEstateMap.module.scss
+++ b/src/modules/home/components/RealEstateMap/RealEstateMap.module.scss
@@ -3,6 +3,15 @@
 .RealEstateMap {
 	height: 100%;
 
+	@include desktop {
+		padding: 0px 0px 50px 0px !important;
+	}
+
+	@include devices(tablet, mobile) {
+		margin-top: 0px !important;
+		padding: 0px 0px 20px 0px !important;
+	}
+
 	.MarkerInfo {
 		position: fixed;
 		opacity: 0;
@@ -60,7 +69,8 @@
 
 		.Slider {
 			max-width: 300px;
-			min-height: 230px;
+			min-height: 300px;
+			max-height: 300px;
 			padding: 5px;
 
 			@include mobile {
@@ -81,7 +91,17 @@
 
 			.Image {
 				border-radius: unset !important;
-				height: 100%;
+				height: 300px;
+				width: 300px;
+				max-width: 300px;
+				max-height: 300px;
+
+				@include mobile {
+					height: 100%;
+					width: 100%;
+					max-width: 150px;
+					max-height: 150px;
+				}
 			}
 		}
 
