--- a/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
+++ b/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
@@ -53,6 +53,7 @@
 		height: 100%;
 		padding: 10px;
 		gap: 5px;
+		overflow: hidden;
 
 		@include mobile {
 			overflow: hidden;
@@ -65,10 +66,13 @@
 			gap: 5px;
 			margin-left: 15px;
 			margin-right: 15px;
+			width: 100%;
+			flex-wrap: wrap;
 
 			@include mobile {
 				margin-left: 0;
 				width: 100%;
+				flex-wrap: nowrap;
 			}
 
 			.Address {
@@ -81,18 +85,20 @@
 					overflow: hidden;
 					font-size: var(--bs-font-medium);
 				}
+
+				@include tablet {
+					font-size: var(--bs-font-extra-large);
+				}
+
+				@include small-desktop {
+					font-size: var(--bs-font-extra-large);
+				}
 			}
 
-			.City {
-				font-size: var(--bs-font-medium);
-				font-weight: 600;
-			}
-
+			.City,
 			.Neighborhood {
 				font-size: var(--bs-font-medium);
 				font-weight: 600;
-				text-overflow: ellipsis;
-				overflow: hidden;
 			}
 
 			.Rooms,
@@ -104,14 +110,25 @@
 			.Floor {
 				font-size: var(--bs-font-medium);
 				font-weight: 600;
+			}
+
+			.Elevator,
+			.Exterior {
+				font-size: var(--bs-font-medium);
+				font-weight: 600;
 				text-overflow: ellipsis;
 				overflow: hidden;
 			}
 
 			.Operation,
 			.Price {
-				font-size: var(--bs-font-extra-large);
+				font-size: var(--bs-font-extra-extra-large);
 				font-weight: 700;
+			}
+
+			.Parking {
+				font-size: var(--bs-font-extra-large);
+				font-weight: 600;
 				text-overflow: ellipsis;
 				overflow: hidden;
 			}
