--- a/src/modules/home/pages/Home/Home.module.scss
+++ b/src/modules/home/pages/Home/Home.module.scss
@@ -15,6 +15,9 @@
 		padding: 5px 25px;
 		background-color: #3664b33b;
 		height: 50px;
+		-webkit-box-shadow: 0px -2px 30px 0px rgba(54, 100, 179, 0.67);
+		-moz-box-shadow: 0px -2px 30px 0px rgba(54, 100, 179, 0.67);
+		box-shadow: 0px -2px 30px 0px rgba(54, 100, 179, 0.67);
 
 		@include mobile {
 			padding: 10px;
@@ -67,27 +70,27 @@
 		flex: 1 1;
 		padding: 0px 150px;
 
-		@include big-tablet {
+		@include desktop {
 			padding: 0px 50px;
 		}
 
-		@include devices(small-tablet, mobile) {
+		@include devices(tablet, mobile) {
 			padding: 0px;
 		}
 
 		.Filter {
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
-			align-items: center;
+			justify-content: flex-start;
+			align-items: flex-start;
 			gap: 10px;
 			max-width: 300px;
 			flex: 1;
 			border: 2px solid #d4deee;
 			border-radius: 0px 0px 3px 3px;
-			height: 500px;
 			margin: 25px 15px 25px 25px;
 			position: relative;
+			padding: 25px;
 
 			.Header {
 				content: 'Filtros';
@@ -119,6 +122,10 @@
 			margin-top: 25px;
 			height: calc(100vh - 80px);
 			padding: 0px 0px 150px 0px;
+
+			@include devices(tablet, mobile) {
+				margin-top: 5px;
+			}
 		}
 	}
 }
