--- a/src/modules/common/forms/FiltersForm/FiltersForm.module.scss
+++ b/src/modules/common/forms/FiltersForm/FiltersForm.module.scss
@@ -4,4 +4,18 @@
 	.Selector {
 		width: 100%;
 	}
+
+	.Footer {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-top: 25px;
+
+		.Button {
+			width: 200px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
 }
