--- a/src/app/AppNavbar/AppNavbar.module.scss
+++ b/src/app/AppNavbar/AppNavbar.module.scss
@@ -4,7 +4,7 @@
 	user-select: none;
 
 	nav {
-		background-color: #3664b3 !important;
+		background-color: var(--bs-primary) !important;
 		padding: 0px;
 		align-items: center;
 	}
@@ -89,7 +89,7 @@
 
 [class~='offcanvas-start'] {
 	width: 200px !important;
-	background-color: #3664b3 !important;
+	background-color: var(--bs-primary) !important;
 
 	[class~='offcanvas-title'] {
 		display: flex;
