--- a/src/modules/home/pages/Home/Home.module.scss
+++ b/src/modules/home/pages/Home/Home.module.scss
@@ -13,7 +13,7 @@
 		align-items: center;
 		gap: 100px;
 		padding: 5px 25px;
-		background-color: #3664b33b;
+		background-color: var(--bs-primary) 3b;
 		height: 50px;
 		-webkit-box-shadow: 0px -2px 30px 0px rgba(54, 100, 179, 0.67);
 		-moz-box-shadow: 0px -2px 30px 0px rgba(54, 100, 179, 0.67);
@@ -37,7 +37,7 @@
 				gap: 10px;
 				padding: 0px 10px;
 				background-color: white;
-				color: #3664b3;
+				color: var(--bs-primary);
 				height: 30px;
 				border: none;
 
@@ -59,7 +59,7 @@
 				justify-content: center;
 				gap: 10px;
 				padding: 0px 10px;
-				background-color: #3664b3;
+				background-color: var(--bs-primary);
 				color: white;
 			}
 		}
@@ -101,7 +101,7 @@
 				right: -2px;
 				height: 50px;
 				border-radius: 3px 3px 0px 0px;
-				background-color: #3664b3;
+				background-color: var(--bs-primary);
 				display: flex;
 				justify-content: center;
 				align-items: center;
