--- a/src/modules/home/components/RealEstateMap/RealEstateMap.module.scss
+++ b/src/modules/home/components/RealEstateMap/RealEstateMap.module.scss
@@ -4,8 +4,12 @@
 	height: 100%;
 
 	@include devices(mobile, tablet) {
-		margin-top: 0px !important;
-		padding: 0px 0px 80px 0px !important;
+		padding: 0px !important;
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		right: 0px;
+		bottom: 0px;
 	}
 
 	@include desktop {
@@ -15,8 +19,8 @@
 	.MarkerInfo {
 		position: fixed;
 		opacity: 0;
-		top: 150px;
-		right: 10px;
+		top: 125px;
+		right: 50px;
 		width: 300px;
 		background-color: var(--bs-white);
 		display: flex;
