--- a/src/modules/home/pages/Home/Home.module.scss
+++ b/src/modules/home/pages/Home/Home.module.scss
@@ -70,7 +70,7 @@
 		justify-content: center;
 		align-items: flex-start;
 		flex: 1 1;
-		height: calc(100vh - 50px);
+		height: calc(100vh - 80px);
 
 		@include desktop {
 			padding: 0px 50px;
@@ -119,7 +119,7 @@
 			}
 		}
 
-		.Step {
+		.StepList {
 			flex: 1 1;
 			display: flex;
 			flex-direction: column;
@@ -128,6 +128,23 @@
 			gap: 10px;
 			margin-top: 25px;
 			height: calc(100vh - 80px);
+			overflow: scroll;
+
+			@include devices(tablet, mobile) {
+				margin-top: 0px;
+			}
+		}
+
+		.StepMap {
+			flex: 1 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+			gap: 10px;
+			margin-top: 25px;
+			height: calc(100vh - 140px);
+			overflow: scroll;
 
 			@include devices(tablet, mobile) {
 				margin-top: 0px;
